--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@nodegui/nodegui": "^0.57.0",
         "@types/body-parser": "^1.19.2",
         "@types/cors": "^2.8.12",
+        "@types/download": "^8.0.1",
         "@types/inquirer": "^9.0.1",
         "@types/lodash-es": "^4.17.6",
         "@types/node": "^18.7.9",
@@ -28,6 +29,7 @@
         "cheerio": "1.0.0-rc.12",
         "cors": "^2.8.5",
         "dotenv": "^16.0.1",
+        "download": "^8.0.0",
         "express": "^4.18.1",
         "functional-utilities": "^1.16.0",
         "inquirer": "^9.1.0",
