--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "go": "esrun ./main.ts",
+        "go": "tsx ./main.ts",
         "chose": "python ./chose.py",
         "format": "prettier --write ."
     },
@@ -13,39 +13,39 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "@digitak/esrun": "^3.2.10",
-        "@nodegui/nodegui": "^0.57.0",
+        "@nodegui/nodegui": "^0.59.0",
         "@types/body-parser": "^1.19.2",
-        "@types/cors": "^2.8.12",
-        "@types/download": "^8.0.1",
-        "@types/inquirer": "^9.0.1",
-        "@types/lodash-es": "^4.17.6",
-        "@types/node": "^18.7.9",
+        "@types/cors": "^2.8.13",
+        "@types/download": "^8.0.2",
+        "@types/inquirer": "^9.0.3",
+        "@types/lodash-es": "^4.17.7",
+        "@types/node": "^18.15.11",
         "@types/node-imap": "^0.9.0",
-        "@types/prompt-sync": "^4.1.1",
-        "@types/prompts": "^2.0.14",
+        "@types/prompt-sync": "^4.2.0",
+        "@types/prompts": "^2.4.3",
         "@types/string-similarity": "^4.0.0",
-        "body-parser": "^1.20.0",
+        "body-parser": "^1.20.2",
         "cheerio": "1.0.0-rc.12",
         "cors": "^2.8.5",
-        "dotenv": "^16.0.1",
+        "dotenv": "^16.0.3",
         "download": "^8.0.0",
-        "express": "^4.18.1",
-        "functional-utilities": "^1.16.0",
-        "ibantools": "^4.1.6",
-        "inquirer": "^9.1.0",
+        "express": "^4.18.2",
+        "functional-utilities": "^2.0.1",
+        "ibantools": "^4.2.2",
+        "inquirer": "^9.1.5",
         "lodash-es": "^4.17.21",
         "node-imap": "^0.9.6",
         "pkg-up": "^4.0.0",
-        "playwright": "^1.25.0",
+        "playwright": "^1.32.1",
         "prompt-sync": "^4.2.0",
-        "pythonia": "^1.0.0",
+        "pythonia": "^1.0.1",
         "string-similarity": "^4.0.4",
-        "typescript": "^4.7.4",
-        "ws": "7.5.1",
-        "zod": "^3.18.0"
+        "tsx": "^3.12.6",
+        "typescript": "^5.0.2",
+        "ws": "8.13.0",
+        "zod": "^3.21.4"
     },
     "devDependencies": {
-        "@types/express": "^4.17.13"
+        "@types/express": "^4.17.17"
     }
 }
